# nautilus-checksums

./: .editorconfig  ChangeLog  INSTALL  Makefile.am  NEWS  README  bootstrap  configure.ac  package.json
po/: POTFILES.in  it.po
src/: Makefile.am  nautilus-checksums.c
